# teste_teddy

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
Prompts/: 01-universal-architecture.yaml  02-universal-database.yaml  Teste Back IA.docx
adr/: 0001-ocr-choice.md  0002-llm-choice.md  0003-persistence-and-logging.md
docs/: architecture.md  endpoint-json.json
scripts/: check_health.py
src/resume_ai/: __init__.py
src/resume_ai/application/dto/: resume_request.py
src/resume_ai/application/interfaces/: audit_repository.py  clock.py  embedding_service.py  llm_service.py  ocr_service.py  vector_store.py
src/resume_ai/application/use_cases/: process_resumes.py
src/resume_ai/domain/models/: audit.py  resume.py
src/resume_ai/domain/value_objects/: uploaded_file.py
src/resume_ai/infrastructure/config/: settings.py
src/resume_ai/infrastructure/llm/: openai_embedding_service.py  openai_llm_service.py
src/resume_ai/infrastructure/logging/: logger.py
src/resume_ai/infrastructure/ocr/: paddle_ocr_service.py
src/resume_ai/infrastructure/persistence/: mongo_audit_repository.py
src/resume_ai/infrastructure/vectorstore/: qdrant_store.py
src/resume_ai/interfaces/api/: main.py
src/resume_ai/interfaces/api/dependencies/: __init__.py
src/resume_ai/interfaces/api/routers/: __init__.py  audit_router.py  resume_router.py
src/resume_ai/interfaces/api/schemas/: audit.py  resume.py
tests/integration/: test_api.py
tests/unit/: test_process_resumes_use_case.py
